fixed css to remove white space on side bar

--- a/website/site/css/etharialle.css
+++ b/website/site/css/etharialle.css
@@ -5,9 +5,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
-    height: 100%;
-    
+    padding: 0;    
 }
 
 .container {
@@ -20,7 +18,6 @@ body {
     background-color: #CD7F32;  /* Sidebar background */
     padding: 20px;
     color: white;
-    height: 100svh;
     top: 0;
     left: 0;
     flex: 0 0 200px;
