--- a/website/themes/etharialle/css/etharialle.css
+++ b/website/themes/etharialle/css/etharialle.css
@@ -20,7 +20,7 @@ body {
     color: white;
     top: 0;
     left: 0;
-    flex: 1 0 200px;
+    flex: 0 0 200px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
